src/objects/User.object
<CustomObject>
    <fields>
        <fullName>CDB_ID__c</fullName>
        <externalId>true</externalId>
        <label>CDB ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Contact_Id__c</fullName>
        <label>Contact Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Type__c</fullName>
        <formula>Profile.UserLicense.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>License Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager_Email__c</fullName>
        <formula>Manager.Email</formula>
        <label>Manager Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager_ID__c</fullName>
        <formula>Manager.ManagerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Manager ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NetSuite_Department_ID__c</fullName>
        <formula>CASE( Netsuite_Department__c , &apos;Advisory&apos;, &apos;4&apos;, &apos;Account Management&apos;, &apos;5&apos;, &apos;Advertising Sales&apos;, &apos;125&apos;, &apos;Business Development&apos;,&apos;148&apos;, &apos;Commercial&apos;, &apos;139&apos;, &apos;Commercial Operations&apos;,&apos;121&apos;, &apos;Customer Success&apos;, &apos;149&apos;, &apos;Enablement&apos;, &apos;150&apos;,&apos;Marketing&apos;,&apos;7&apos;,&apos;Sales&apos;,&apos;110&apos;,&apos;0&apos;)</formula>
        <label>NetSuite Department ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NetSuite_Subsidiary_Id__c</fullName>
        <formula>CASE(Subsidiary__c ,
&quot;10 GSA LLC&quot;,8,
&quot;13 GSA UK Ltd&quot;,10,
&quot;14 React News Ltd&quot;,29,
&quot;18.1 LDC&quot;,48,
&quot;18.2 On-Site Research Limited&quot;,51,
&quot;18.3 Edge Analytics Ltd&quot;,52,0)</formula>
        <label>NetSuite Subsidiary Id</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Netsuite_Department__c</fullName>
        <label>Netsuite Department</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account Management</fullName>
                </value>
                <value>
                    <fullName>Advertising Sales</fullName>
                </value>
                <value>
                    <fullName>Business Development</fullName>
                </value>
                <value>
                    <fullName>Commercial Operations</fullName>
                </value>
                <value>
                    <fullName>Customer Success</fullName>
                </value>
                <value>
                    <fullName>Enablement</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Advisory</fullName>
                </value>
                <value>
                    <fullName>Commercial</fullName>
                </value>
                <value>
                    <fullName>Compliance</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Human Resources</fullName>
                </value>
                <value>
                    <fullName>Operations</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Netsuite_ID__c</fullName>
        <description>Unique Id of the User record in NetSuite</description>
        <externalId>true</externalId>
        <label>Netsuite ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Profile_ID__c</fullName>
        <formula>Profile.Id</formula>
        <label>Profile ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>US</fullName>
                </value>
                <value>
                    <fullName>UK</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Role_ID__c</fullName>
        <formula>UserRole.Id</formula>
        <label>Role ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Team__c</fullName>
        <description>Make sure to update other fields when adding new values (Qualified Team, Assigned Team from Lead).</description>
        <label>Sales Team</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hewett Research</fullName>
                    <label>Green</label>
                </value>
                <value>
                    <fullName>White</fullName>
                </value>
                <value>
                    <fullName>UK Sales</fullName>
                </value>
                <value>
                    <fullName>US News</fullName>
                </value>
                <value>
                    <fullName>US Research</fullName>
                </value>
                <value>
                    <fullName>EU SDR Inbound</fullName>
                </value>
                <value>
                    <fullName>US SDR Inbound</fullName>
                </value>
                <value>
                    <fullName>SDR Outbound</fullName>
                </value>
                <value>
                    <fullName>Head of SDR&apos;s</fullName>
                </value>
                <value>
                    <fullName>React News</fullName>
                </value>
                <value>
                    <fullName>Expansion Equity</fullName>
                </value>
                <value>
                    <fullName>Expansion React</fullName>
                </value>
                <value>
                    <fullName>Expansion US Core</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subsidiary__c</fullName>
        <label>Subsidiary</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>10 GSA LLC</fullName>
                </value>
                <value>
                    <fullName>13 GSA UK Ltd</fullName>
                </value>
                <value>
                    <fullName>14 React News Ltd</fullName>
                </value>
                <value>
                    <fullName>18.1 LDC</fullName>
                </value>
                <value>
                    <fullName>18.2 On-Site Research Limited</fullName>
                </value>
                <value>
                    <fullName>18.3 Edge Analytics Ltd</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Synced__c</fullName>
        <description>Denotes whether the user is created as employee in NetSuite or not.</description>
        <label>Synced?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <label>AM Team</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Core</fullName>
                </value>
                <value>
                    <fullName>Enterprise</fullName>
                </value>
                <value>
                    <fullName>Strategic</fullName>
                </value>
                <value>
                    <fullName>Europe</fullName>
                </value>
                <value>
                    <fullName>US Core</fullName>
                </value>
                <value>
                    <fullName>Expansion Equity</fullName>
                </value>
                <value>
                    <fullName>Expansion US Core</fullName>
                </value>
                <value>
                    <fullName>Expansion React</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Trigger_Real_time_Sync__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Triggers sync of user record as employee to NetSuite</description>
        <label>Trigger Real-time Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>XFILES__Amazon_IAM_Secret__c</fullName>
        <label>Amazon IAM Secret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>XFILES__Amazon_IAM_key__c</fullName>
        <label>Amazon IAM key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>affectlayer__AffectLayer_Callback_Number_Label__c</fullName>
        <label>AffectLayer Callback Number Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>affectlayer__AffectLayer_Callback_Number__c</fullName>
        <label>AffectLayer Callback Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>affectlayer__AffectLayer_Caller_Id_Label__c</fullName>
        <label>AffectLayer Caller Id Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>affectlayer__AffectLayer_Caller_Id__c</fullName>
        <label>AffectLayer Caller Id</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>asknicely__Preferred_Account_NPS_Period__c</fullName>
        <defaultValue>&quot;month-3&quot;</defaultValue>
        <label>AskNicely Preferred Account NPS Period</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__API_URL__c</fullName>
        <formula>$Api.Partner_Server_URL_290</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Hide_Copado_feedback__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>The visibility of the message asking users to rate &amp; feedback Copado on the AppExchange is controlled here.</inlineHelpText>
        <label>Hide Copado feedback</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Show_Copado_Tips__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Show Copado Tips</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Work_Manager_Panels__c</fullName>
        <description>JSON containing current user panels on the Backlog</description>
        <label>Work Manager Panels</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <listViews>
        <fullName>AM</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USER_ROLE.NAME</field>
            <operation>contains</operation>
            <value>am</value>
        </filters>
        <label>AM</label>
    </listViews>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>Advisory</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USER_ROLE.NAME</field>
            <operation>equals</operation>
            <value>Advisory</value>
        </filters>
        <label>Advisory</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
    </listViews>
    <listViews>
        <fullName>Finance</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USER_ROLE.NAME</field>
            <operation>equals</operation>
            <value>Finance</value>
        </filters>
        <label>Finance</label>
    </listViews>
    <listViews>
        <fullName>Integration_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.FIRST_NAME</field>
            <operation>contains</operation>
            <value>Integration</value>
        </filters>
        <label>Integration Users</label>
    </listViews>
    <listViews>
        <fullName>Newly_Added</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>Newly Added</label>
        <sharedTo>
            <role>System_Administrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>REA_Only</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USER_ROLE.NAME</field>
            <operation>equals</operation>
            <value>REA</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>REA Only</label>
    </listViews>
    <listViews>
        <fullName>React</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.TITLE</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.EMAIL</field>
            <operation>contains</operation>
            <value>@react</value>
        </filters>
        <label>React</label>
    </listViews>
    <listViews>
        <fullName>Sales</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>CORE.USERS.FORECAST_ENABLED</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USER_ROLE.NAME</field>
            <operation>contains</operation>
            <value>Sales</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Sales</label>
    </listViews>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Team_Account_Priority</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
IsActive=true,				
OR( 
UserRole.Name=&quot;CAM&quot;,
UserRole.Name=&quot;CAM Manager&quot;),
ISBLANK(TEXT(Team__c)))</errorConditionFormula>
        <errorMessage>Please make sure that Team is populated.</errorMessage>
    </validationRules>
</CustomObject>